@@ -81,10 +81,11 @@
 	define( "UNREAD",   202 );
 
 	# login methods
-	define( "PLAIN",	0 );
-	define( "CRYPT",	1 );
-	define( "MD5",		2 );
-	define( "LDAP",		3 );
+	define( "PLAIN",	  0 );
+	define( "CRYPT",	  1 );
+	define( "MD5",		  2 );
+	define( "LDAP",		  3 );
+	define( "BASIC_AUTH", 4 );
 
 	# file upload methods
 	define( "DISK",       1 );
