@@ -34,57 +34,19 @@
     }
 
 	# Passed our checks.  Insert into DB then send email.
-
-	# Create random password
-	$t_password = create_random_password( $f_email );
-
-	# Use a default access level
-	# create the almost unique string for each user then insert into the table
-	$t_cookie_string = create_cookie_string();
-	$t_password2 = process_plain_password( $t_password );
-    $query = "INSERT
-    		INTO $g_mantis_user_table
-    		( id, username, email, password, date_created, last_visit,
-    		enabled, protected, access_level, login_count, cookie_string )
-			VALUES
-			( null, '$f_username', '$f_email', '$t_password2', NOW(), NOW(),
-			1, 0, $g_default_new_account_access_level, 0, '$t_cookie_string')";
-    $result = db_query( $query );
-    if ( !$result ) {
-    	PRINT "$s_account_create_fail<p>";
+	if ( !signup_user( $f_username, $f_email ) ) {
+		PRINT "$s_account_create_fail<p>";
 		PRINT "<a href=\"$g_signup_page\">$s_proceed</a>";
-    	exit;
-    }
-
-	# Create preferences for the user
-	$t_user_id = db_insert_id();
-    $query = "INSERT
-    		INTO $g_mantis_user_pref_table
-    		(id, user_id, project_id,
-    		advanced_report, advanced_view, advanced_update,
-    		refresh_delay, redirect_delay,
-    		email_on_new, email_on_assigned,
-    		email_on_feedback, email_on_resolved,
-    		email_on_closed, email_on_reopened,
-    		email_on_bugnote, email_on_status,
-    		email_on_priority, language)
-    		VALUES
-    		(null, '$t_user_id', '0000000',
-    		'$g_default_advanced_report', '$g_default_advanced_view', '$g_default_advanced_update',
-    		'$g_default_refresh_delay', '$g_default_redirect_delay',
-    		'$g_default_email_on_new', '$g_default_email_on_assigned',
-    		'$g_default_email_on_feedback', '$g_default_email_on_resolved',
-    		'$g_default_email_on_closed', '$g_default_email_on_reopened',
-    		'$g_default_email_on_bugnote', '$g_default_email_on_status',
-    		'$g_default_email_on_priority', '$g_default_language')";
-    $result = db_query($query);
-
-	# Send notification email
-	email_signup( $t_user_id, $t_password );
+		exit;
+	}
 ?>
 <?php print_page_top1() ?>
-<?php print_page_top2() ?>
-
+<?php
+	print_head_bottom();
+	print_body_top();
+	print_header( $g_page_title );
+	print_top_page( $g_top_include_page );
+?>
 
 <p>
 <div align="center">
