@@ -12,12 +12,14 @@ Mantis
  * Fixed document links (ChangeLog, README, etc.)
  * Fixed problem where portuguese_brazil localization did not appear correctly.
  * Fixed several minor CSS class consistency issues.
+ * Fixed file download links to use rawurlencode().
  * Removed site_settings link in print_manage_doc_menu().
  * Renamed doc/CONFIGURATION to doc/CUSTOMIZATION.
  * Modified edit user links to use the username instead of the [edit] link.
  * Modified edit project links to use the project name instead of the [edit] link.
  * Modified default/config_inc1.php to have more more css global variables.
  * Added project name as supplementary info next to bug id in buglist for "All projects" option
+ * Added Basic Authentication patch.
 
 01.23.2002  -   0.17.0
 
